# myetc

./: ArchLinux.sh  InstallNixOS.sh  Mac.sh  PreInitLinux.sh  PreInitMac.sh  PreInitManjaro.sh  README.md  amazon.sh  apt.sh  centos.sh  debian.sh  deepin.sh  extract_key.sh  id_rsa_git.aes256  id_rsa_git.des3  openssl.sh  pacman.sh  private.sh  public.sh  sudoers.sh  termux.sh  unix.sh  windows.sh  yum.sh
admin/: nix.sh  sudoers.sh
config/: AGENTS.md  configuration.nix  desktop-environment.nix  ghostty-config  profiles.txt  rc  reflector.conf  zshrc.sh
config/Templates/: c.c  cpp.cpp  deploy.sh  launcher.desktop
config/init-project/: CMakeLists.txt  nc.sh  nc_cpp.sh  ncpp.sh  nh.sh
config/profile.d/: cmake_clangd.sh  init-project.sh  jmake.sh  local-bin.sh  local_bin.sh  sudo_keepalive.sh  tp.sh  using.sh  usr-local-bin.sh
config/systemd-user/: rc.service
config/vim/: .vimrc  c.vimrc  cpp.vimrc  deploy.sh  go.vimrc  python.vimrc  rs.vimrc  tex.vimrc  yaml.vimrc
copy-paste/: windows-admin.ps1  windows.ps1
helper/: extract_key.sh  git.sh  nix.sh  seaf-cli.sh  seafile-init.sh
install/brew/: cmake.sh
install/npm/: apt.sh  latest_node_npm.sh  nix.sh  npm.sh  pacman.sh
install/tmux/: tmux.sh
manjaro/: main.sh  pacman.sh
software/: set_env.sh
software/encrypt/: decipher.sh  encrypt.sh
software/python/: deploy.sh  pip.conf
software/small_tools/: .gitignore  Makefile  PrimeFactorization.cpp  deploy.sh  hardware_concurrency.cpp
software/vim/: .vimrc  c.vimrc  cpp.vimrc  deploy.sh  rs.vimrc  (+3 more)
universal/: nix.sh  python-mirror.sh  python.sh  zsh.sh
(+8 files in other folders)
